Add the delete method. Use the try-resource statements to replace the close statements.